Added sprite class to load images and suches

--- a/RokkoJS/war/index.html
+++ b/RokkoJS/war/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
   <script type="text/javascript" language="javascript" src="rokkojs/rokkojs.nocache.js"></script>
+  <div id="imgShelf"></div>
   </body>
 </html>
