Restructured things (app vs engine), and updated ignore list

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <script src="/lib/closure-library/closure/goog/base.js"></script>
-<script src="src/rokko/deps.js"></script>
+<script src="rokko/src/rokko/deps.js"></script>
 <script src="app.js"></script>
 <script>main();</script>
 </body>
