--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
             padding: 0;
             width: 100%;
             height: 100%;
+            overflow: hidden;
         }
 
         canvas {
             display: block;
-            margin: 50px auto;
+            margin: 50px auto 0;
             background: #eee;
         }
     </style>
