--- a/tools/rokko-map/index.html
+++ b/tools/rokko-map/index.html
@@ -2,14 +2,69 @@
 <html lang="en" ng-app="RokkoMap">
 <head>
     <title>RokkoMap</title>
+
+    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css"/>
     <script src="js/angular.min.js"></script>
     <script src="js/modules/RokkoMap.js"></script>
+    <script src="vendor/jquery/jquery.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.js"></script>
+
+    <style>
+        .dashboardPush {
+            margin-top: 65px;
+        }
+
+        .brand {
+            margin-left: 0 !important;
+            color: #c00 !important;
+            font-family: mono;
+        }
+
+        .dropdown-menu {
+            border-radius: 0;
+            margin-top: 0;
+            border-top: 1px solid #333;
+        }
+
+        .dropdown-menu:after {
+            border: none !important;
+            content: "" !important;
+        }
+
+        .dropdown-menu a {
+            color: #aaa !important;
+        }
+
+        .dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus, .dropdown-submenu:hover>a, .dropdown-submenu:focus>a {
+            background: #c00;
+            color: #000 !important;
+        }
+    </style>
 </head>
 <body>
+<div class="container-fluid">
 
-<div id="menu"></div>
-<div id="toolsPanel"></div>
-<div id="mapPanel"></div>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+            <a class="brand" href="#/">Rokko Map</a>
+            <ul class="nav" ng-controller="MenuController">
+                <li class="dropdown" ng-repeat="(action, children) in actions">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{action}} <b class="caret"></b></a>
+                    <ul class="dropdown-menu dropdown-toggle">
+                        <li ng-repeat="option in children" ng-click="dispatchMenu(option.id)">
+                            <a href="#">{{option.name}}</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
 
+    <div class="dashboardPush"></div>
+    <div class="row-fluid">
+        <div class="span2" ng-include src="'js/modules/views/settings.html'"></div>
+        <div class="span10" ng-include src="'js/modules/views/map.html'"></div>
+    </div>
+</div>
 </body>
 </html>
