--- a/tools/rokko-map/index.html
+++ b/tools/rokko-map/index.html
@@ -86,8 +86,13 @@
             height: 55px;
             float: left;
             background: #ccc;
-            margin: 1px;
+            border: 1px solid #fff;
+            margin: 0;
             padding: 0;
+        }
+
+        .tileImg:hover {
+            border: 1px solid #333;
         }
 
         .tileImgBg {
@@ -96,7 +101,7 @@
             height: 100%;
             padding: 0;
             margin: 0;
-            opacity: 0.8;
+            opacity: 0.75;
             -webkit-transition: all 0.5s;
         }
 
