--- a/tools/rokko-map/demo.html
+++ b/tools/rokko-map/demo.html
@@ -100,32 +100,15 @@
 <body>
 <div class="container-fluid">
 
-    <div class="navbar navbar-inverse navbar-fixed-top" id="MenuController">
+    <div class="navbar navbar-inverse navbar-fixed-top" id="MenuController" ng-controller="MenuController">
         <div class="navbar-inner">
-            <a class="brand" href="#/">Rokko Map</a>
-            <ul class="nav">
+            <a class="brand" href="#/">RokkoMap</a>
+            <ul class="nav" ng-repeat="action in actions">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Map <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{action.name}} <b class="caret"></b></a>
                     <ul class="dropdown-menu dropdown-toggle">
-                        <li>
-                            <a href="#">New</a>
-                        </li>
-                        <li>
-                            <a href="#">Open</a>
-                        </li>
-                        <li>
-                            <a href="#">Export</a>
-                        </li>
-                        <li>
-                            <a href="#">Settings</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
-                    <ul class="dropdown-menu dropdown-toggle">
-                        <li>
-                            <a href="#">About</a>
+                        <li ng-repeat="option in action.children">
+                            <a href="#" ng-click="dispatchMenu(option.id)">{{option.name}}</a>
                         </li>
                     </ul>
                 </li>
